# spotify-api-rs

./: .gitignore  Cargo.toml  config.json  test.json
src/: auth.rs  main.rs  playlist.rs  server.rs
src/playlist/: my_playlists.rs  responses.rs
