[package]
name = "spotify_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.22.1"
open = "5.1.2"
rand = "0.8.5"
random-string = "1.1.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
tiny_http = "0.12.0"
url = "2.5.0"
